--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="Venus TVL">
+    <meta name="keywords" content="Bidao TVL">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
@@ -18,32 +18,31 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-config" content="/browserconfig.xml">
-    <meta name="apple-mobile-web-app-title" content="Venus Protocol">
-    <meta name="application-name" content="Venus Protocol">
-    <meta name="thumbnail" content="https://venus.io/images/banner.png">
-    <meta name="title" content="Venus Protocol">
-    <meta name="description" content="The Venus Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.">
-    <link rel="canonical" href="https://venus.io">
-    <meta property="og:title" content="Venus Protocol">
-    <meta property="og:image" content="https://venus.io/images/banner.png">
+    <meta name="apple-mobile-web-app-title" content="Bidao Protocol">
+    <meta name="application-name" content="Bidao Protocol">
+    <meta name="thumbnail" content="https://bidao.io/images/banner.png">
+    <meta name="title" content="Bidao Protocol">
+    <meta name="description" content="The Bidao Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.">
+    <link rel="canonical" href="https://bidao.io">
+    <meta property="og:title" content="Bidao Protocol">
+    <meta property="og:image" content="https://bidao.io/images/banner.png">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="The Venus Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.">
-    <meta property="og:url" content="https://venus.io">
-    <meta property="og:site_name" content="Venus Protocol">
+    <meta property="og:description" content="The Bidao Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.">
+    <meta property="og:site_name" content="Bidao Protocol">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Venus Protocol">
-    <meta property="twitter:description" content="The Venus Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.">
-    <meta property="twitter:image" content="https://venus.io/images/banner.png">
-    <meta name="twitter:site" content="@VenusWallet">
-    <meta name="twitter:creator" content="@VenusWallet">
-    <meta property="twitter:url" content="https://venus.io">
+    <meta property="twitter:title" content="Bidao Protocol">
+    <meta property="twitter:description" content="The Bidao Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.">
+    <meta property="twitter:image" content="https://bidao.io/images/banner.png">
+    <meta name="twitter:site" content="@BidaoWallet">
+    <meta name="twitter:creator" content="@BidaoWallet">
+    <meta property="twitter:url" content="https://bidao.io">
     <meta name="google-site-verification" content="lYDzVz0SnYTgGwn7I3ocRDO5-Yhtk9lFujCFJUljqOo">
     <meta name="google-site-verification" content="YjfX8FfaC3MEVi6nAG6ApFJJlZwtz1nNOjGBKRgaVyE">
     <meta name="apple-itunes-app" content="app-id=1476726454">
-    <meta name="google-play-app" content="app-id=com.Venus.wallet">
-    <meta property="og:title" content="Venus Protocol">
-    <meta name="twitter:title" content="Venus Protocol">
+    <meta name="google-play-app" content="app-id=com.Bidao.wallet">
+    <meta property="og:title" content="Bidao Protocol">
+    <meta name="twitter:title" content="Bidao Protocol">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
@@ -58,11 +57,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Venus Protocol</title>
+    <title>Bidao Protocol</title>
   </head>
   <body>
     <noscript>
-      The Venus Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.
+      The Bidao Protocol is a decentralized money market built on the Binance Smart chain that enables users to borrow and supply collateral onto the platform without central authority or control.
     </noscript>
     <div id="root"></div>
     <!--
